<resources>
    <string name="app_name">Quick Notes</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_notes">My Notes</string>
    <string name="create">Create</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="create_note">Create Note</string>
    <string name="heading">Heading</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="iconedit">iconEdit</string>
    <string name="icondelete">iconDelete</string>
    <string name="no_notes">No Notes</string>
    <string name="signout">signOut</string>
</resources>