<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/_35ssp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_60sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/grey"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_20sdp"/>

    <EditText
        android:id="@+id/etTextEmailAddressSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/example_gmail_com"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"/>

    <EditText
        android:id="@+id/etTextPasswordSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <TextView
        android:id="@+id/tvForgotPasswordSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/blue"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <ProgressBar
        android:id="@+id/progressBarSignIn"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnSignInSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:background="@drawable/btn_primary"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        android:paddingBottom="@dimen/_20sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/tvSignUpSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_5sdp"/>
    </LinearLayout>
</LinearLayout>