<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ForgotPassActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="@dimen/_35ssp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_60sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_20sdp"/>

    <EditText
        android:id="@+id/etTextEmailAddressForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/example_gmail_com"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>


    <Button
        android:id="@+id/btnSubmitForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:background="@drawable/btn_primary"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>
</LinearLayout>